--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -51,8 +51,10 @@ SoundCueCookQualityIndex=-1
 
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
-TargetedHardwareClass=EHardwareClass::Desktop
-DefaultGraphicsPerformance=EGraphicsPreset::Maximum
+TargetedHardwareClass=Desktop
+AppliedTargetedHardwareClass=Desktop
+DefaultGraphicsPerformance=Maximum
+AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_TopDown",NewGameName="/Script/AITheCore")
@@ -60,3 +62,18 @@ DefaultGraphicsPerformance=EGraphicsPreset::Maximum
 +ActiveClassRedirects=(OldClassName="TP_TopDownPlayerController",NewClassName="AITheCorePlayerController")
 +ActiveClassRedirects=(OldClassName="TP_TopDownGameMode",NewClassName="AITheCoreGameMode")
 +ActiveClassRedirects=(OldClassName="TP_TopDownCharacter",NewClassName="AITheCoreCharacter")
+
+[/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
+bEnablePlugin=True
+bAllowNetworkConnection=True
+SecurityToken=9AB80D594B0EDD1CF56CD49A1AE2274A
+bIncludeInShipping=False
+bAllowExternalStartInShipping=False
+bCompileAFSProject=False
+bUseCompression=False
+bLogFiles=False
+bReportStats=False
+ConnectionType=USBOnly
+bUseManualIPAddress=False
+ManualIPAddress=
+
