Attack and strafe behavior

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -75,3 +75,4 @@ ManualIPAddress=
 
 [CoreRedirects]
 +ClassRedirects=(OldName="/Script/AITheCoreBT.ATC_AICharacterBase",NewName="/Script/AITheCoreBT.TC_AICharacterBase")
++ClassRedirects=(OldName="/Script/AITheCoreBT.BTTask_PlayIdleBreaker",NewName="/Script/AITheCoreBT.BTTask_PlayAnimationOfType")
